:sparkles: Factory storage update
